Se sube nuevamente proyecto

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <link rel="stylesheet" href="./styles.css">
 <link rel="stylesheet" href="./mediaqueries.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<link rel="stylesheet" href="./indexlogin.html">
-<link rel="stylesheet" href="./indexregistro.html">
+
 </head>
 <body>
     <header>
@@ -24,7 +23,7 @@
                 <li><a href="#sobrenosotros" >SOBRE NOSOTROS</a></li>
                 <li><a href="#servicios" >SERVICIOS</a></li>
                 <li><a href="#contacto" >CONTACTO</a></li>
-                <li><a href="http://127.0.0.1:5500/indexlogin.html" target="_blank"><span>LOGIN</span></a></li>
+                <li><a href="./login.html" target="_blank"><span>LOGIN</span></a></li>
             </ul>
         </nav>
     </header>
@@ -88,7 +87,7 @@
         <div class="info-registro">
             <h3>¡Registrate y conocé nuestros beneficios! </h3>
                <p> También vas a tener disponible nuestros recursos gratuitos</p>
-              <a href="http://127.0.0.1:5500/indexregistro.html" target="_blank"> <button class="boton-registro">REGISTRARME</button></a>
+              <a href="./registro.html" target="_blank"> <button class="boton-registro">REGISTRARME</button></a>
 </div>
 
 <div class="contacto">
